fix: refactor code to play five rounds

--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Let's Play Rock, Paper & Scissors !!!</h1>
+    <div class="choices">
+        <button class="rock" >Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissors">Scissors</button>
+    </div>
+    <div class="result">
+        <p class="score">Current Score: <span class="curr-score"></span></p>
+        <p class="message"></p>
+        <p class="final-result"></p>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
